# Factory-HUB

./: .gitignore  CMakeLists.txt  GatewayHub.cpp  GatewayHub.h  GatewayUI.cpp  GatewayUI.h  HUB_v1.cpp  HUB_v3.cpp  README.md  Report.md  build.sh  imgui.ini  main.cpp  sparkplug_b.pb.cc  sparkplug_b.pb.h
imgui/backends/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
old/: HUB_v2.cpp  HUB_v3.cpp
test/: webUI.html
